[Auditbeat] Host: Fill top-level host fields (#12259)
Copy fields of `system/host` dataset to `host.*` so those are always filled.

Also add `system.audit.host.os.codename` to complete what `add_host_metadata` adds.

--- a/auditbeat/docs/fields.asciidoc
+++ b/auditbeat/docs/fields.asciidoc
@@ -6862,6 +6862,16 @@ IP addresses.
 
 
 
+*`system.audit.host.os.codename`*::
++
+--
+type: keyword
+
+OS codename, if any (e.g. stretch).
+
+
+--
+
 *`system.audit.host.os.platform`*::
 +
 --
