--- a/libbeat/docs/breaking-7.1.asciidoc
+++ b/libbeat/docs/breaking-7.1.asciidoc
@@ -3,3 +3,10 @@
 === Breaking changes in 7.1
 
 {see-relnotes}
+
+//NOTE: The notable-breaking-changes tagged regions are re-used in the
+//Installation and Upgrade Guide
+
+//tag::notable-breaking-changes[]
+
+// end::notable-breaking-changes[]
