Mark `postgresql.log.timestamp` field as deprecated

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -12149,6 +12149,9 @@ Fields from the PostgreSQL log files.
 *`postgresql.log.timestamp`*::
 +
 --
+
+deprecated[7.2.0]
+
 The timestamp from the log line.
 
 
