--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -137,7 +137,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Ignore prometheus metrics when their values are NaN or Inf. {pull}12084[12084] {issue}10849[10849]
 - In the kibana/stats metricset, only log error (don't also index it) if xpack is enabled. {pull}12265[12265]
 - Require client_auth by default when ssl is enabled for module http metricset server{pull}12333[12333]
-- Require Certificate authorities, Certificate file and key when SSL is enabled for module http metricset server. {pull}12355[12355]
+- Require certificate authorities, certificate file and key when SSL is enabled for module http metricset server. {pull}12355[12355]
 
 *Packetbeat*
 
