--- a/libbeat/docs/outputconfig.asciidoc
+++ b/libbeat/docs/outputconfig.asciidoc
@@ -1145,7 +1145,7 @@ endif::[]
 
 ===== `bulk_max_size`
 
-The "best effort" number of events to bulk in a single Kafka request. Works only when bulk_flush_frequency > 0; The default is 2048.
+The maximum number of events to bulk in a single Kafka request. The default is 2048.
 
 ===== `bulk_flush_frequency`
 
