[metricbeat] Add windows memory data to docker/memory (#12172)
Adding windows memory data to docker/memory

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -4539,6 +4539,49 @@ Memory metrics.
 
 
 
+[float]
+== commit fields
+
+Committed bytes on Windows
+
+
+
+*`docker.memory.commit.total`*::
++
+--
+type: long
+
+format: bytes
+
+Total bytes
+
+
+--
+
+*`docker.memory.commit.peak`*::
++
+--
+type: long
+
+format: bytes
+
+Peak committed bytes on Windows
+
+
+--
+
+*`docker.memory.private_working_set.total`*::
++
+--
+type: long
+
+format: bytes
+
+private working sets on Windows
+
+
+--
+
 *`docker.memory.fail.count`*::
 +
 --
