Move tags under aws.tags.* a module field

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -830,6 +830,16 @@ Total.
 
 
 
+*`aws.tags.*`*::
++
+--
+type: object
+
+Tag key value pairs from aws resources.
+
+
+--
+
 [float]
 == cloudwatch fields
 
