--- a/metricbeat/docs/modules/elasticsearch.asciidoc
+++ b/metricbeat/docs/modules/elasticsearch.asciidoc
@@ -5,14 +5,15 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-module-elasticsearch]]
 == Elasticsearch module
 
-The Elasticsearch module contains a minimal set of metrics to enable monitoring
-of Elasticsearch across multiple versions. The Elasticsearch X-Pack module
-enables you to monitor more Elasticsearch metrics with our {stack-ov}/xpack-monitoring.html[monitoring] feature.
+There are two modules that collect metrics about {es}: 
 
-The default metricsets in the Elasticsearch module are `node` and `node_stats`.
-The default metricsets in the Elasticsearch X-Pack module are `ccr`,
-`cluster_stats`, `index`, `index_recovery`, `index_summary`, `ml_job`,
-`node_stats`, and `shard`.
+* The Elasticsearch module contains a minimal set of metrics to enable
+monitoring of Elasticsearch across multiple versions. The default metricsets in
+this module are `node` and `node_stats`.
+* The Elasticsearch X-Pack module enables you to monitor more Elasticsearch
+metrics with our {stack-ov}/xpack-monitoring.html[monitoring] feature. The
+default metricsets in this module are `ccr`, `cluster_stats`, `index`,
+`index_recovery`, `index_summary`, `ml_job`, `node_stats`, and `shard`.
 
 [float]
 === Compability
