--- a/metricbeat/docs/modules/kibana.asciidoc
+++ b/metricbeat/docs/modules/kibana.asciidoc
@@ -5,12 +5,13 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-module-kibana]]
 == Kibana module
 
-The Kibana module tracks only the high-level metrics. The Kibana X-Pack module
-enables you to monitor more Kibana metrics with our
-{stack-ov}/xpack-monitoring.html[monitoring] feature.
+There are two modules that collect metrics about {kib}: 
 
-The default metricset in the Kibana module is `status`.
-The default metricset in the Kibana X-Pack module is `stats`.
+* The Kibana module tracks only the high-level metrics. The default metricset in
+this module is `status`.
+* The Kibana X-Pack module enables you to monitor more Kibana metrics with our
+{stack-ov}/xpack-monitoring.html[monitoring] feature. The default metricset in
+this module is `stats`.
 
 [float]
 === Compatibility
