[Auditbeat] Start system module without host ID (#12373)
Allows the system module to start without the host ID. It will log a warning, and documents will not contain any `entity_id` fields.

(cherry picked from commit 1328f864d3220d856fad1bffc18dd7383d51cf82)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -89,6 +89,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Fix formatting of config files on macOS and Windows. {pull}12148[12148]
 - Fix direction of incoming IPv6 sockets. {pull}12248[12248]
 - Package dataset: Auto-detect package directories. {pull}12289[12289]
+- System module: Start system module without host ID. {pull}12373[12373]
 
 *Filebeat*
 
