[Auditbeat] Start system module without host ID (#12373)
Allows the system module to start without the host ID. It will log a warning, and documents will not contain any `entity_id` fields.

(cherry picked from commit 1328f864d3220d856fad1bffc18dd7383d51cf82)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -43,6 +43,7 @@ https://github.com/elastic/beats/compare/v6.7.2...6.8[Check the HEAD diff]
 - Package dataset: Fixed a crash inside librpm after Auditbeat has been running for a while. {issue}12147[12147] {pull}12168[12168]
 - Fix direction of incoming IPv6 sockets. {pull}12248[12248]
 - Package dataset: Auto-detect package directories. {pull}12289[12289]
+- System module: Start system module without host ID. {pull}12373[12373]
 
 *Filebeat*
 
