--- a/docs/devguide/create-metricset.asciidoc
+++ b/docs/devguide/create-metricset.asciidoc
@@ -236,26 +236,57 @@ var (
 		"test_bool":   c.Bool("testBool", s.Optional), <3>
 		"test_float":  c.Float("testFloat"),
 		"test_obj": s.Object{
-			"test_obj_string": c.Str("testObjString"),
+			"test_obj_string": c.Str("testObjString", s.IgnoreAllErrors), <4>
 		},
 	}
 )
 
 func eventMapping(input map[string]interface{}) common.MapStr {
-	return schema.Apply(input) <4>
+	return schema.Apply(input) <5>
 }
 ----
 <1> Marks a field as required.
 <2> If a field has no schema option set, it is equivalent to `Required`.
 <3> Marks the field as optional.
-<4> By default, `Apply` will fail and return an error if any required field is missing. Using the optional second argument, you can specify how `Apply` handles different fields of the  schema. The possible values are:
+<4> Ignore any value conversion error
+<5> By default, `Apply` will fail and return an error if any required field is missing. Using the optional second argument, you can specify how `Apply` handles different fields of the  schema. The possible values are:
 - `AllRequired` is the default behavior. Returns an error if any required field is missing, including fields that are required because no schema option is set.
 - `FailOnRequired`  will fail if a field explicitly marked as `required` is missing.
-- `IgnoreAllErrors` will ignore all parsing errors.
 - `NotFoundKeys(cb func([]string))` takes a callback function that will be called with a list of missing keys, allowing for finer-grained error handling.
 
 In the above example, note that it is possible to create the schema object once
-and apply it to all events. 
+and apply it to all events. You can also use `ApplyTo` to add additional data to an existing `MapStr` object:
+[source,go]
+----
+
+var (
+	schema = s.Schema{
+		"test_string": c.Str("testString"),
+		"test_int":    c.Int("testInt"),
+		"test_bool":   c.Bool("testBool"),
+		"test_float":  c.Float("testFloat"),
+		"test_obj": s.Object{
+			"test_obj_string": c.Str("testObjString"),
+		},
+	}
+
+	additionalSchema = s.Schema{
+		"second_string": c.Str("secondString"),
+		"second_int": ": c.Int("secondInt")
+	}
+)
+
+	data, err := schema.apply(input)
+	if err {
+		return err
+	}
+
+	if m.parseMoreData{
+		additionalSchema.ApplyTo(data, input)
+	}
+
+----
+
 
 [float]
 ==== Configuration File
