--- a/x-pack/filebeat/module/cisco/_meta/docs.asciidoc
+++ b/x-pack/filebeat/module/cisco/_meta/docs.asciidoc
@@ -5,6 +5,8 @@
 
 == Cisco module
 
+beta[]
+
 This is a module for Cisco network device's logs. Currently supports the `asa`
 fileset for Cisco ASA firewall logs received over syslog or read from a file.
 
