[6.8] Validate stack modules' metricsets when xpack.enabled = true (#12386) (#12431)
* Validate stack modules' metricsets when xpack.enabled = true (#12386)

* Checking validity of elasticsearch module with xpack.enabled

* Refactoring: extracting validation function

* Make the hound happy

* More generic comment language

* Implement validation for kibana module

* Adding CHANGELOG entry

* Fixing up CHANGELOG

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -91,6 +91,8 @@ https://github.com/elastic/beats/compare/v6.7.2...6.8[Check the HEAD diff]
 
 *Metricbeat*
 
+- Add validation for elasticsearch and kibana modules' metricsets when xpack.enabled is set to true. {pull}12386[12386]
+
 *Packetbeat*
 
 *Winlogbeat*
