--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -24595,7 +24595,9 @@ The available bits of entropy
 *`system.entropy.entropy.pct`*::
 +
 --
-type: percentage
+type: scaled_float
+
+format: percentage
 
 The percentage of available entropy, relative to the pool size of 4096
 
