Fix 11975 kubernetes cores fields data type long -> float (#11975)
kubernetes.container.cpu.limit.cores is now a float
kubernetes.container.cpu.request.cores is now a float

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -13944,7 +13944,7 @@ Waiting (ContainerCreating, CrashLoopBackoff, ErrImagePull, ImagePullBackoff) or
 *`kubernetes.container.cpu.limit.cores`*::
 +
 --
-type: long
+type: float
 
 Container CPU cores limit
 
@@ -13954,7 +13954,7 @@ Container CPU cores limit
 *`kubernetes.container.cpu.request.cores`*::
 +
 --
-type: long
+type: float
 
 Container CPU requested cores
 
