Fix 11975 - change Kubernetes container cpu cores fields to float (#12476)
* Fix 11975 kubernetes cores fields data type long -> float (#11975)

kubernetes.container.cpu.limit.cores is now a float
kubernetes.container.cpu.request.cores is now a float

(cherry picked from commit 8502c794b9c6403391530c98f84a596d3de80d54)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -20,6 +20,11 @@ https://github.com/elastic/beats/compare/v7.2.0...7.2[Check the HEAD diff]
 
 *Metricbeat*
 
+- Add new option `OpMultiplyBuckets` to scale histogram buckets to avoid decimal points in final events {pull}10994[10994]
+- Change cloud.provider from ec2 to aws and from gce to gcp in add_cloud_metadata to align with ECS. {issue}10775[10775] {pull}11687[11687]
+- system/raid metricset now uses /sys/block instead of /proc/mdstat for data. {pull}11613[11613]
+- kubernetes.container.cpu.limit.cores and kubernetes.container.cpu.requests.cores are now floats. {issue}11975[11975]
+
 *Packetbeat*
 
 *Winlogbeat*
