--- a/heartbeat/docs/autodiscover-aws-elb-config.asciidoc
+++ b/heartbeat/docs/autodiscover-aws-elb-config.asciidoc
@@ -6,9 +6,13 @@ heartbeat.autodiscover:
   providers:
   - type: aws_elb
     region: us-east-1
+    credentials:
+        # If you don't wish to use env vars or shared credentials files explicitly put credentials here.
+        #access_key_id: my-access-key
+        #secret_access_key: my-secret-access-key
     templates:
     - condition:
-        has_fields: ["port"]
+        equals.port: 8080
       config:
       - type: tcp
         hosts: ["${data.host}:${data.port}"]
@@ -16,4 +20,4 @@ heartbeat.autodiscover:
         timeout: 1s
 -------------------------------------------------------------------------------------
 
-This configuration launches a `tcp` monitor for all elbs that have a declared port (TODO: come up with a better condition).
+This configuration launches a `tcp` monitor for all ELBs that have a declared port (TODO: come up with a better condition).
