--- a/heartbeat/docs/configuring-howto.asciidoc
+++ b/heartbeat/docs/configuring-howto.asciidoc
@@ -75,6 +75,7 @@ include::{libbeat-dir}/docs/loggingconfig.asciidoc[]
 include::{libbeat-dir}/docs/shared-env-vars.asciidoc[]
 :standalone!:
 
+:autodiscoverAWSELB:
 include::{libbeat-dir}/docs/shared-autodiscover.asciidoc[]
 
 :standalone:
