--- a/metricbeat/docs/configuring-howto.asciidoc
+++ b/metricbeat/docs/configuring-howto.asciidoc
@@ -78,7 +78,7 @@ include::{libbeat-dir}/docs/shared-env-vars.asciidoc[]
 :standalone!:
 
 :autodiscoverJolokia:
-:autodiscoverHints:
+:auNtodiscoverHints:
 include::{libbeat-dir}/docs/shared-autodiscover.asciidoc[]
 
 :standalone:
